# 2C2N

./: .gitignore  CMakeLists.txt  README.md
env/: env.h
include/: common.h  layer.h  matrix.h  utils.h
lib/: CMakeLists.txt  common.c  common.h  layer.c  layer.h  network.c  network.h  neuron.c  neuron.h  utils.c  utils.h
src/: common.c  layer.c  layer.h  main.c  matrix.c  network.c  network.h  neuron.c  neuron.h  utils.c  utils.h
test/: CMakeLists.txt  test_common.c  test_layer.c  test_matrix.c  test_network.c
test/env/: env.h
tools/: build.sh  format.sh  heap-check.sh  test.sh
